@@ -49,6 +49,8 @@ So you've finally got Nagios up and running and you want to know how you can twe
 
 <li><b>Use large installation tweaks</b>.  Enabling the <a href="configmain.html#use_large_installation_tweaks">use_large_installation_tweaks</a> option may provide you with better performance.  Read more about what this option does <a href="largeinstalltweaks.html">here</a>.<br><br></li>
 
+<li><b>Disable environment macros</b>.  Macros are normally made available to check, notification, event handler, etc. commands as environment variables.  This can be a problem in a large Nagios installation, as it consumes some additional memory and (more importantly) more CPU.  If your scripts don't need to access the macros as environment variables (e.g. you pass all necessary macros on the command line), you don't need this feature.  You can prevent macros from being made available as environment variables by using the <a href="configmain.html#enable_environment_macros">enable_environment_macros</a> option.<br><br></li>
+
 <li><b>Check Result Reaper Frequency</b>. The <a href="configmain.html#check_result_reaper_frequency">check_result_reaper_frequency</a> variable determines how often Nagios should check for host and service check results that need to be processed.  The maximum amount of time it can spend processing those results is determined by the max reaper time (see below).  If your reaper frequency is too high (too infrequent), you might see high latencies for host and service checks.<br><br></li>
 
 <li><b>Max Reaper Time</b>. The <a href="configmain.html#max_check_result_reaper_time">max_check_result_reaper_time</a> variables determines the maximum amount of time the Nagios daemon can spend processing the results of host and service checks before moving on to other things - like executing new host and service checks.  Too high of a value can result in large latencies for your host and service checks.  Too low of a value can have the same effect.  If you're experiencing high latencies, adjust this variable and see what effect it has.  Again, you should be <a href="mrtggraphs.html">graphing statistics</a> in order to make this determination.<br><br></li>
